--- a/Secciones/comocomprar.html
+++ b/Secciones/comocomprar.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../Img/LOGO arboc.jpeg">
     <link rel="stylesheet" href="../css/style.css">
     <title>ARBOC</title>
+    <link rel="stylesheet" href="../Bootstrap/bootstrap.min.css">
 </head>
 
 <body>
@@ -16,6 +17,15 @@
     </header>
     <!-- Menú -->
     <nav>
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand"></a>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Elegi tus arboc" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
         <ul>
             <li>
                 <a href="../index.html">INICIO</a>
