--- a/Secciones/politicasdecambio.html
+++ b/Secciones/politicasdecambio.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Img/LOGO arboc.jpeg">
     <link rel="stylesheet" href="../css/style.css">
+
     <title>ARBOC</title>
+    <link rel="stylesheet" href="../Bootstrap/bootstrap.min.css">
 </head>
+
 <body class="cambios">
     <header>
         <img class="imagenLogo" src="../Img/logo arboc2.jpeg" alt="LOGO">
     </header>
     <!-- Menú -->
     <nav>
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand"></a>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Elegi tus arboc" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
         <ul>
             <li>
                 <a href="../index.html">INICIO</a>
@@ -36,17 +49,26 @@
     <h1 class="encabezadoUno">CAMBIOS Y DEVOLUCIONES</h1>
     <br>
     <h3 class="encabezadoDosPc">¿Como puedo cambiar mi pedido?</h3>
-    <p class="texto">Tenés tiempo hasta un mes luego de realizar la compra, solamente te pediremos el número de tu pedido online, la factura de compra o tarjeta de regalo, y que el producto se encuentre en optimas condiciones. Tendrás la opción de cambiarlo por cualquier producto de la tienda o directamente pedir el reembolso del dinero pagado en efectivo. Verás reflejada la devolución de tu dinero en tu cuenta de MercadoPago. De no contar con una cuenta, MP creará una vinculada a tu correo electrónico de forma automática para que puedas recibir tu dinero allí. En caso que quieras cambiar un regalo que recibiste, y no tenés ticket de cambio, no te preocupes! Con el nombre o mail de la persona que realizó la compra podés realizar el cambio.</p>
+    <p class="texto">Tenés tiempo hasta un mes luego de realizar la compra, solamente te pediremos el número de tu
+        pedido online, la factura de compra o tarjeta de regalo, y que el producto se encuentre en optimas condiciones.
+        Tendrás la opción de cambiarlo por cualquier producto de la tienda o directamente pedir el reembolso del dinero
+        pagado en efectivo. Verás reflejada la devolución de tu dinero en tu cuenta de MercadoPago. De no contar con una
+        cuenta, MP creará una vinculada a tu correo electrónico de forma automática para que puedas recibir tu dinero
+        allí. En caso que quieras cambiar un regalo que recibiste, y no tenés ticket de cambio, no te preocupes! Con el
+        nombre o mail de la persona que realizó la compra podés realizar el cambio.</p>
     <br>
     <h3 class="encabezadoDosPc">¿Puedo pedir el reembolso de mi dinero si no estoy contento con mi compra?</h3>
-    <p class="texto">Sí. Disponés de 15 días desde que recibís tu pedido para solicitar el reembolso del dinero si no estás conforme con tu compra, en caso de defecto y/o falla en el/los producto/s adquirido/s.</p>
+    <p class="texto">Sí. Disponés de 15 días desde que recibís tu pedido para solicitar el reembolso del dinero si no
+        estás conforme con tu compra, en caso de defecto y/o falla en el/los producto/s adquirido/s.</p>
     <br>
     <h3 class="encabezadoDosPc">Los productos sólo serán aceptados si son devueltos en las siguientes condiciones:</h3>
     <ul class="texto">
         <li>No lavados ni usados, sin olores ni manchas, sin marcas o alteraciones hechas por el cliente.</li>
-        <li>En el caso de que ARBOC entienda que el producto devuelto no se encuadra en los criterios arriba descriptos, el sitio tiene derecho a no aceptar la devolución o realizar el cambio.</li>
+        <li>En el caso de que ARBOC entienda que el producto devuelto no se encuadra en los criterios arriba descriptos,
+            el sitio tiene derecho a no aceptar la devolución o realizar el cambio.</li>
         <li>Se reconocerá el producto al valor abonado al momento de la compra.</li>
-        <li>Para el caso de compras de dos o más productos en conjunto a un precio especial, se considerará el valor proporcional de cada uno según su precio y se redondeará a favor del cliente.</li>
+        <li>Para el caso de compras de dos o más productos en conjunto a un precio especial, se considerará el valor
+            proporcional de cada uno según su precio y se redondeará a favor del cliente.</li>
     </ul>
     <br><br>
     <footer>
@@ -54,10 +76,12 @@
         <ul class="contactInd">
             <li><a href="https://api.whatsapp.com/send/?phone=2236688538&text&type=phone_number&app_absent=0"
                     target="_blank"><img src="../Img/wpp.png" alt="wpp"></a></li>
-            <li><a href="https://www.instagram.com/arbocmdp/" target="_blank"><img src="../Img/ig.png" alt="ig"></a></li>
+            <li><a href="https://www.instagram.com/arbocmdp/" target="_blank"><img src="../Img/ig.png" alt="ig"></a>
+            </li>
             <li><a href="https://www.facebook.com/arbocmdp" target="_blank"><img src="../Img/fb.png" alt="fb"></a></li>
         </ul>
-    <p class="copy">Arboc &copy</p>
+        <p class="copy">Arboc &copy</p>
     </footer>
 </body>
+
 </html>
