--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="shortcun icon" href="./Img/LOGO arboc.jpeg">
     <link rel="stylesheet" href="./css/style.css">
     <title>ARBOC</title>
+
+    <!-- link mediante archivos locales/ css -->
+    <link rel="stylesheet" href="./Bootstrap/bootstrap.min.css">
+
+
+
+
 </head>
 
 <body>
@@ -16,6 +23,15 @@
     </header>
     <!-- Menú -->
     <nav>
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand"></a>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Elegi tus arboc" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
         <ul>
             <li>
                 <a href="./index.html">INICIO</a>
@@ -34,8 +50,10 @@
             </li>
         </ul>
     </nav>
+
     <main>
         <h1 class="encabezadoUno">ARBOC</h1>
+       
         <br>
         <div class="contenedorFotosInicio">
             <div class="productosInicio">
@@ -84,11 +102,29 @@
         <br><br>
         <h2 class="encabezadoDos">ENVIOS A TODO EL PAIS!</h2>
         <br><br>
-        <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BNc3OFZ2J6k"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+        
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./Img/c3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Img/c1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Img/c5.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
 
         <br>
@@ -103,6 +139,13 @@
             <input type="email" name="Email" placeholder="Email">
             <input class="botonEnviar" type="submit" value="ENVIAR">
         </form>
+        <br><br>
+        <div class="video-responsive">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/BNc3OFZ2J6k"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </main>
     <br><br>
     <footer>
@@ -116,6 +159,9 @@
 
         <p class="copy">Arboc &copy</p>
     </footer>
+
+    <!-- Scrip -->
+    <script src="./Bootstrap/bootstrap.bundle.js"></script>
 </body>
 
 </html>
