--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./Img/c3.jpg" class="d-block w-100" alt="...">
+                    <img src="./Img/c3.jpg" class="d-block w-100" alt="mediasrayas">
                 </div>
                 <div class="carousel-item">
-                    <img src="./Img/c1.jpg" class="d-block w-100" alt="...">
+                    <img src="./Img/c1.jpg" class="d-block w-100" alt="mediasrayas2">
                 </div>
                 <div class="carousel-item">
-                    <img src="./Img/c5.jpg" class="d-block w-100" alt="...">
+                    <img src="./Img/c5.jpg" class="d-block w-100" alt="charmander">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -141,7 +141,7 @@
         </form>
         <br><br>
         <div class="video-responsive">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BNc3OFZ2J6k"
+            <iframe width="350" height="300" src="https://www.youtube.com/embed/BNc3OFZ2J6k"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
